--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <ul>
-          <li class="title">Max Vorgers Test</li>
+          <li class="title">Max Vorgers</li>
           <li class="aboutmenav">About Me</li>
           <li class="skills">Skills</li>
           <li class="projects">Projects</li>
