--- a/index.html
+++ b/index.html
@@ -36,11 +36,24 @@
         </div>
       </div>
     </section>
+    <section class="skills-container">
+      <h1>Skills</h1>
+      <div class="skills">
+        <span class="skills-top-row">
+          <img src="Images/Magento_full.svg" alt="" />
+          <img src="Images/Shopify_full.svg" alt=""
+        /></span>
+        <span class="skills-bottom-row">
+          <img src="Images/HTML5.svg" alt="" />
+          <img src="Images/CSS3.svg" alt=""
+        /></span>
+      </div>
+    </section>
     <section class="aboutme">
       <h1>About Me</h1>
       <section class="aboutme-container">
         <div class="picture">
-          <img src="/IMG_6588.JPG" alt="Headshot of me" />
+          <img src="/Images/Headshot.jpg" alt="Headshot of me" />
         </div>
         <div class="description">
           <h2>Creative, Inventive, Modest</h2>
