Navbar padding problem test
Somehow the padding-left and padding-right on the last navbar element gets added to the padding-left twice.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <nav>
         <ul>
           <li class="title">Max Vorgers</li>
-          <li class="aboutmenav">About Me</li>
-          <li class="skills">Skills</li>
-          <li class="projects">Projects</li>
+          <li class="aboutmenav"><a href="#aboutme">About Me</a></li>
+          <li class="skills"><a href="#skills">Skills</a></li>
+          <li class="portfolio"><a href="#portfolio"></a>Portfolio</li>
         </ul>
       </nav>
     </header>
@@ -36,7 +36,7 @@
         </div>
       </div>
     </section>
-    <section class="skills-container">
+    <section class="skills-container" id="skills">
       <h1>Skills</h1>
       <div class="skills">
         <span class="skills-top-row">
@@ -49,7 +49,7 @@
         /></span>
       </div>
     </section>
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
       <h1>About Me</h1>
       <section class="aboutme-container">
         <div class="picture">
