Navbar padding fix and text-decoration color fix
The Navbar is now fully updated to feature links on desktop.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li class="title">Max Vorgers</li>
           <li class="aboutmenav"><a href="#aboutme">About Me</a></li>
           <li class="skills"><a href="#skills">Skills</a></li>
-          <li class="portfolio"><a href="#portfolio"></a>Portfolio</li>
+          <li class="portfolio"><a href="#portfolio">Portfolio</a></li>
         </ul>
       </nav>
     </header>
