Create consistent class structure throughout all sections

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         /></span>
       </div>
     </section>
-    <section class="aboutme" id="aboutme">
+    <section class="aboutme-container" id="aboutme">
       <h1>About Me</h1>
-      <section class="aboutme-container">
+      <section class="aboutme">
         <div class="picture">
           <img src="/Images/Headshot.jpg" alt="Headshot of me" />
         </div>
