Hamburger menu mobile placement

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <body>
     <header>
       <nav>
+        <span class="hamburger"
+          ><img src="Images/bars-solid.svg" alt=""
+        /></span>
         <ul>
           <li class="title">Max Vorgers</li>
           <li class="aboutmenav"><a href="#aboutme">About Me</a></li>
